# pipiline_agent

./: .gitignore  PACKAGING.md  README.md  __init__.py  pyproject.toml  requirements.txt
agent/: README.md  __init__.py  simple.py
chat/: README.md  __init__.py  chat_ollama.py
cmd_line/: README.md  __init__.py  cmd_tools.py
coding/: README.md  __init__.py  python_tools.py
config/: __init__.py  config.yaml
core/: README.md  __init__.py  agents.py  chat.py  enums.py  fsm.py  json_utils.py  logging_config.py  memory.py  messages.py  monitor.py  resources.py  tools.py
directory/: README.md  __init__.py  file_access.py  workdir.py
embeddings/: README.md  __init__.py  aligner.py
jenkins_utils/: Build.py  BuildData.py  Job.py  JobInfo.py  README.md  __init__.py
